# mail-mcp-service

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  ci.sh  example.env
src/: main.cpp
src/entity/: CMakeLists.txt  error.cpp  health_status.cpp  oauth_start.cpp
src/entity/include/: error.hpp  health_status.hpp  json_serializable.hpp  oauth_start.hpp
src/http/: CMakeLists.txt  auth_controller.cpp  error_controller.cpp  health_controller.cpp  http_response_data.cpp  server.cpp  server.hpp  session.cpp  session.hpp
src/http/controller/: health_controller.cpp  health_controller.hpp
src/http/include/: auth_controller.hpp  error_controller.hpp  health_controller.hpp  http_response_data.hpp  server.hpp  session.hpp
